[package]
name = "teleport-hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
bytes = "1.5.0"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["rt", "macros", "rt-multi-thread"] }
toml = "0.8.8"
